# grassgame

./: .gitignore  CMakeLists.txt  README.md
engine/ecm/: ecm.cpp  ecm.hpp
engine/level_loader/: level_loader.cpp  level_loader.hpp
engine/src/: engine.cpp  engine.hpp  renderer.cpp  utilities.cpp
res/env/: world.tmx
res/templates/tilesets/: demo.tmx  snow-expansion.tsx
src/: main.cpp  main.hpp  notepad.txt
src/components/: cmp_menuitem.cpp  cmp_menuitem.h  cmp_sprite.cpp  cmp_sprite.h  cmp_text.cpp  cmp_text.h
src/scenes/: debug.cpp  debug.hpp  menu.cpp  menu.hpp
